CHANGES

4.0.0

- REMOVE namespaces (everything is tied to a captcha ID now)
- REMOVE options use_sqlite_db and sqlite_database (deprecated since 3.2 RC4)
- REMOVE database options from class (options are now defined in config.inc.php)
- REMOVE Flash audio playback and Flash fallback
- REMOVE "static captcha" functionality (getCaptchaId and checkByCaptchaId)
- Implement StorageAdapter interface
- Move session and database storage into StorageAdapters
- Add memcached StorageAdapter (requires PHP extension memcached)
- Add Redis StorageAdapter (requires PHP extension Redis [https://github.com/phpredis/phpredis])

 3.6.4
 - Fix XSS vulnerability in example_form.ajax.php (Discovered by RedTeam. advisory rt-sa-2016-002)
 - Update example_form.ajax.php to use Securimage::getCaptchaHtml()

 3.6.3
 - Add support for multibyte wordlist files
 - Fix code generation issues with UTF-8 charsets
 - Add parameter to getCaptchaHtml() method to control display components of captcha HTML
 - Fix database audio storage issue with multiple namespaces

 3.6.2
 - Support HTTP range requests with audio playback (iOS requirement)
 - Add optional config.inc.php for storing global configuration settings

 3.6.1
 - Fix copyElement bug in securimage.js for IE Flash fallback

 3.6
 - Implement CAPTCHA audio using HTML5 <audio> with optional Flash fallback
 - Support MP3 audio using LAME MP3 Encoder (Internet Explorer 9+ does not support WAV format in <audio> tags)
 - Add getCaptchaHtml() options to support full framework integration (ruifil)

 3.5.4
 - Fix email validation code in example form files
 - Fix backslashes in getCaptchaHtml for img attribute on Windows systems

 3.5.3
 - Add options for audio button to getCaptchaHtml(), fix urlencoding of flash parameters that was breaking button

 3.5.2

 - Add Securimage::getCaptchaHtml() for getting automatically generated captcha html code